--- a/.gitignore
+++ b/.gitignore
@@ -189,22 +189,24 @@ examples/msg/trace-masterworker/trace-masterworker
 examples/msg/trace-process-migration/trace-process-migration
 examples/msg/trace-platform/trace-platform
 examples/msg/trace-host-user-variables/trace-host-user-variables
-examples/s4u/app-masterworker/s4u_app-masterworker
-examples/s4u/app-pingpong/s4u_app-pingpong
-examples/s4u/app-token-ring/s4u_app-token-ring
-examples/s4u/actions-comm/s4u_actions-comm
-examples/s4u/actions-storage/s4u_actions-storage
-examples/s4u/actor-create/s4u_actor-create
-examples/s4u/actor-daemon/s4u_actor-daemon
-examples/s4u/actor-kill/s4u_actor-kill
-examples/s4u/actor-migration/s4u_actor-migration
-examples/s4u/actor-suspend/s4u_actor-suspend
-examples/s4u/basic/s4u_basic
-examples/s4u/basic/s4u_basic_deployment
-examples/s4u/basic/s4u_basic_function
-examples/s4u/dht-chord/s4u_dht-chord
-examples/s4u/io/s4u_io
-examples/s4u/mutex/s4u_mutex
+examples/s4u/actions-comm/s4u-actions-comm
+examples/s4u/actions-storage/s4u-actions-storage
+examples/s4u/actor-create/s4u-actor-create
+examples/s4u/actor-daemon/s4u-actor-daemon
+examples/s4u/actor-kill/s4u-actor-kill
+examples/s4u/actor-migration/s4u-actor-migration
+examples/s4u/actor-suspend/s4u-actor-suspend
+examples/s4u/app-masterworker/s4u-app-masterworker
+examples/s4u/app-pingpong/s4u-app-pingpong
+examples/s4u/app-token-ring/s4u-app-token-ring
+examples/s4u/async-waitall/s4u-async-waitall
+examples/s4u/async-waitany/s4u-async-waitany
+examples/s4u/basic/s4u-basic
+examples/s4u/basic/s4u-basic_deployment
+examples/s4u/basic/s4u-basic_function
+examples/s4u/dht-chord/s4u-dht-chord
+examples/s4u/io/s4u-io
+examples/s4u/mutex/s4u-mutex
 examples/simdag/daxload/sd_daxload
 examples/simdag/dag-dotload/sd_dag-dotload
 examples/simdag/ptg-dotload/sd_ptg-dotload
