--- a/.gitignore
+++ b/.gitignore
@@ -121,12 +121,9 @@ doc/msg-tuto-src/masterworker1
 doc/msg-tuto-src/masterworker2
 doc/msg-tuto-src/masterworker3
 doc/msg-tuto-src/masterworker4
-examples/msg/actions-comm/actions-comm
-examples/msg/actions-storage/actions-storage
 examples/msg/async-wait/async-wait
 examples/msg/async-waitall/async-waitall
 examples/msg/async-waitany/async-waitany
-examples/msg/app-bittorrent/bittorrent
 examples/msg/app-chainsend/chainsend
 examples/msg/cloud-capping/cloud-capping
 examples/msg/cloud-masterworker/cloud-masterworker
@@ -189,6 +186,8 @@ examples/msg/trace-masterworker/trace-masterworker
 examples/msg/trace-process-migration/trace-process-migration
 examples/msg/trace-platform/trace-platform
 examples/msg/trace-host-user-variables/trace-host-user-variables
+examples/msg/*.pcap
+examples/msg/*.tr
 examples/s4u/actions-comm/s4u-actions-comm
 examples/s4u/actions-storage/s4u-actions-storage
 examples/s4u/actor-create/s4u-actor-create
@@ -196,6 +195,7 @@ examples/s4u/actor-daemon/s4u-actor-daemon
 examples/s4u/actor-kill/s4u-actor-kill
 examples/s4u/actor-migration/s4u-actor-migration
 examples/s4u/actor-suspend/s4u-actor-suspend
+examples/s4u/app-bittorrent/s4u-bittorrent
 examples/s4u/app-masterworker/s4u-app-masterworker
 examples/s4u/app-pingpong/s4u-app-pingpong
 examples/s4u/app-token-ring/s4u-app-token-ring
@@ -207,6 +207,7 @@ examples/s4u/basic/s4u-basic_function
 examples/s4u/dht-chord/s4u-dht-chord
 examples/s4u/io/s4u-io
 examples/s4u/mutex/s4u-mutex
+examples/s4u/plugin-hostload/s4u-plugin-hostload
 examples/simdag/daxload/sd_daxload
 examples/simdag/dag-dotload/sd_dag-dotload
 examples/simdag/ptg-dotload/sd_ptg-dotload
@@ -234,6 +235,7 @@ examples/smpi/mc/send_deterministic
 examples/smpi/NAS/dt
 examples/smpi/NAS/ep
 examples/smpi/NAS/is
+examples/smpi/replay_multiple/deployment.xml
 examples/smpi/replay_multiple/replay_multiple
 examples/smpi/replay/one_trace
 examples/smpi/ring_c
@@ -253,6 +255,9 @@ teshsuite/mc/dwarf-expression/dwarf-expression
 teshsuite/mc/random-bug/random-bug
 teshsuite/mc/mutex-handling/mutex-handling
 teshsuite/mc/mutex-handling/without-mutex-handling
+teshsuite/msg/actions-comm/actions-comm
+teshsuite/msg/actions-storage/actions-storage
+teshsuite/msg/app-bittorrent/bittorrent
 teshsuite/msg/cloud-sharing/cloud-sharing
 teshsuite/msg/concurrent_rw/concurrent_rw
 teshsuite/msg/get_sender/get_sender
@@ -687,6 +692,7 @@ teshsuite/smpi/mpich3-test/f77/rma/c2f2cwinf
 teshsuite/smpi/mpich3-test/f77/rma/winaccf
 teshsuite/smpi/mpich3-test/f77/rma/winfencef
 teshsuite/smpi/mpich3-test/f77/rma/wingetf
+teshsuite/smpi/mpich3-test/f77/rma/wingroupf
 teshsuite/smpi/mpich3-test/f77/rma/winnamef
 teshsuite/smpi/mpich3-test/f77/rma/winscale1f
 teshsuite/smpi/mpich3-test/f77/topo/cartcrf
@@ -729,6 +735,7 @@ teshsuite/smpi/mpich3-test/f90/rma/c2f2cwinf90
 teshsuite/smpi/mpich3-test/f90/rma/winaccf90
 teshsuite/smpi/mpich3-test/f90/rma/winfencef90
 teshsuite/smpi/mpich3-test/f90/rma/wingetf90
+teshsuite/smpi/mpich3-test/f90/rma/wingroupf90
 teshsuite/smpi/mpich3-test/f90/rma/winnamef90
 teshsuite/smpi/mpich3-test/f90/rma/winscale1f90
 teshsuite/smpi/mpich3-test/group/groupcreate
