sonar: fix a syntax error in the file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -72,8 +72,8 @@ sonar.issue.ignore.multicriteria.c5b.resourceKey=**/*.hpp
 # This is not disabled in example/ because our code should be nice looking
 sonar.issue.ignore.multicriteria.c6a.ruleKey=cpp:S3584
 sonar.issue.ignore.multicriteria.c6a.resourceKey=src/**/*.cpp
-sonar.issue.ignore.multicriteria.c6a.ruleKey=cpp:S3584
-sonar.issue.ignore.multicriteria.c6a.resourceKey=teshsuite/**/*.cpp
+sonar.issue.ignore.multicriteria.c6b.ruleKey=cpp:S3584
+sonar.issue.ignore.multicriteria.c6b.resourceKey=teshsuite/**/*.cpp
 
 # "reinterpret_cast" should not be used
 # But we need this to interface C and Fortran
