sonar: also exclude java tests from coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -103,8 +103,8 @@ sonar.cfamily.gcov.reportsPath=Testing/CoverageInfo
 # Files to ignore from coverage analysis:
 #   - foreign test suites
 #   - platform files (I fail to get sonar ignore *.xml files)
-#   - Java code and examples
-sonar.coverage.exclusions=teshsuite/smpi/isp/**,teshsuite/smpi/mpich3-test/**,examples/platforms/**,src/bindings/java/**,examples/java/**
+#   - Java code, examples and tests
+sonar.coverage.exclusions=teshsuite/smpi/isp/**,teshsuite/smpi/mpich3-test/**,examples/platforms/**,src/bindings/java/**,examples/java/**,teshsuite/java/**
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
